# mnemonas

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.en.md  SUPPORT.md  codecov.yml  coverage.out  docker-compose.yml  go.mod  go.sum  mnemonas.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-apply-patch-test.txt  copilot-instructions.md  dependabot.yml  pull_request_template.md
.pids/: dataplane.pid  frontend.pid  nasd.pid
client/: .metadata  README.en.md  README.md  analysis_options.yaml  pubspec.yaml
dataplane/: Cargo.toml  build.rs
dataplane/src/: cas.rs  cdc.rs  lib.rs  main.rs  service.rs
dataplane/src/proto/: mnemonas.dataplane.v1.rs
dataplane/tests/: dataplane_integration.rs
docs/: README.en.md  README.md  api-reference.en.md  api-reference.md  architecture.en.md  architecture.md  backup-guide.en.md  backup-guide.md  cloud-firewall-checklist.en.md  cloud-firewall-checklist.md  configuration.en.md  configuration.md  design-clean.html  design-decisions.en.md  design-decisions.md  design-mnemosyne.html  design-mockup.html  development.en.md  development.md  docker-deployment.en.md  docker-deployment.md  extension-points.en.md  extension-points.md  faq.en.md  faq.md  linux-systemd-deployment.en.md  linux-systemd-deployment.md  mounting-guide.en.md  mounting-guide.md  (+21 more)
(+860 files in other folders)
